infra/kustomize/uploader.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader
  labels:
    server : uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader
  template:
    metadata:
      labels:
        app: uploader
    spec:
      containers:
      - name: session-server
        image: session-server
        imagePullPolicy: Never
        command: ["python", "uploader.py"]
        ports:
            - containerPort: 56001
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz/ready
            port: 56001
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 250m
            memory: 500Mi
          requests:
            cpu: 250m
            memory: 500Mi
